--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
     <body>
         <h1>Hello World!</h1>
+        <div>
+            <img src="Amanpreet Singh.jpg" height="100">
+        </div>
     </body>
 </html>
